feat: error handle
